[dq] #N/A make it support browser

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -11,13 +11,16 @@
     "prestart": "npm run babel",
     "start": "node example",
     "babel": "babel src --out-dir lib",
-    "prepublish": "npm run babel"
+    "dist": "browserify -r ./index.js:$npm_package_name > bundle.js",
+    "build": "npm run babel && npm run dist",
+    "prepublish": "npm run build"
   },
   "author": "dq",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "6.26.0",
-    "babel-preset-es2015": "6.24.1"
+    "babel-preset-es2015": "6.24.1",
+    "browserify": "14.5.0"
   },
   "babel": {
     "presets": [
