--- a/javascript/package.json
+++ b/javascript/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-preset-es2015": "6.24.1",
+    "bower": "1.8.2",
     "browserify": "14.5.0"
   },
   "babel": {
